--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.10.2"
+    "@astrojs/react": "^4.3.0",
+    "@measured/puck": "^0.19.1",
+    "@supabase/supabase-js": "^2.50.2",
+    "astro": "^5.10.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
