--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+  "engines": {
+    "node": "23.x"
+  },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@measured/puck": "^0.19.1",
