--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@measured/puck": "^0.19.1",
     "@supabase/supabase-js": "^2.50.2",
     "astro": "^5.10.2",
+    "motion": "^12.23.0",
     "open-props": "^1.7.15",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
