--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,9 @@ services:
       - WASABI_BUCKET_NAME=${WASABI_BUCKET_NAME}
     command: >
       sh -c "
-        set -e &&
-        echo '🔄 Updating packages...' &&
-        apt-get update &&
-        echo '🐍 Installing Python and pip...' &&
-        apt-get install -y python3 python3-pip &&
-        echo '📦 Installing Node modules...' &&
+        apt-get update && apt-get install -y python3 python3-pip &&
         npm install &&
-        echo '🔨 Building Astro project...' &&
         npm run build &&
-        echo '☁️ Installing AWS CLI...' &&
         pip3 install awscli &&
-        echo '🚀 Uploading to Wasabi S3 bucket...' &&
         aws s3 sync ./dist s3://${WASABI_BUCKET_NAME} --endpoint-url=${WASABI_ENDPOINT_URL} --delete
       "
