--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   astro-deploy:
-    image: node:20-bullseye-slim
+    image: node:20-alpine
     working_dir: /app
     volumes:
       - .:/app
@@ -14,7 +14,7 @@ services:
       - WASABI_BUCKET_NAME=${WASABI_BUCKET_NAME}
     command: >
       sh -c "
-        apt-get update && apt-get install -y python3 python3-pip &&
+        apk add --no-cache python3 py3-pip &&
         npm install &&
         npm run build &&
         pip3 install awscli &&
