--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,12 @@ services:
       - WASABI_BUCKET_NAME=${WASABI_BUCKET_NAME}
     command: >
       sh -c "
-        apk add --no-cache python3 py3-pip &&
+        apk add --no-cache python3 py3-pip bash &&
+        python3 -m venv /tmp/venv &&
+        . /tmp/venv/bin/activate &&
+        pip install --upgrade pip &&
+        pip install awscli &&
         npm install &&
         npm run build &&
-        pip3 install awscli &&
         aws s3 sync ./dist s3://${WASABI_BUCKET_NAME} --endpoint-url=${WASABI_ENDPOINT_URL} --delete
       "
