--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "upload": "node upload-to-wasabi.js"
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
@@ -16,7 +17,8 @@
     "astro": "^5.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "aws-sdk": "^2.1422.0"
   },
   "devDependencies": {
     "tailwindcss-motion": "^1.1.1"
