--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
-    "aws-sdk": "^2.1422.0"
+    "@aws-sdk/client-s3": "^3.380.0"
   },
   "devDependencies": {
     "tailwindcss-motion": "^1.1.1"
