--- a/package.json
+++ b/package.json
@@ -11,16 +11,12 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@aws-sdk/client-s3": "^3.380.0",
     "@measured/puck": "^0.19.1",
     "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11",
-    "@aws-sdk/client-s3": "^3.380.0"
-  },
-  "devDependencies": {
-    "tailwindcss-motion": "^1.1.1"
+    "react-dom": "^19.1.0"
   }
 }
