--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.2",
+    "astro-compressor": "^1.0.0",
     "motion": "^12.23.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
